dashboard/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    k8s-app: kubernetes-dashboard
  name: kubernetes-dashboard
  namespace: kubernetes-dashboard
  annotations:
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "selfsigned"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/instance: forecastle
    forecastle.stakater.com/group: "Admin"
    forecastle.stakater.com/icon: "https://kubernetes.io/images/kubernetes-horizontal-color.png"
spec:
  tls:
  - hosts:
    - kubernetes.home.lab
    secretName: kubernetes-selfsigned-cert-tls
  rules:
  - host: kubernetes.home.lab
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
